Adjust spacing issues around title on Home page

--- a/css/main.scss
+++ b/css/main.scss
@@ -160,7 +160,6 @@ p {
     text-shadow: $text-shadow_display;
     font-size: 80px;
     margin-top: 30px;
-    padding-bottom: 30px;
   }
 
   .home_title-before {
@@ -388,7 +387,6 @@ p {
     .home_title {
       font-size: 40px;
       margin-top: 15px;
-      padding-bottom: 15px;
     }
 
     .home_title-before {
@@ -436,7 +434,6 @@ p {
   .container_home {
     .home_title {
       margin-top: 15px;
-      padding-bottom: 15px;
       font-size: 30px;
     }
 
